--- a/product-details.html
+++ b/product-details.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bocaditos Chulos</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/breadcrum-style.css">
 </head>
 
 <body>
@@ -47,20 +48,19 @@
       <span class="divider">></span>
       <a class="productos-breadcrum" href="products.html">Productos</a>
       <span class="divider">></span>
-      <span class="active-breadcrum">Gomitas de colágeno</a>
+      <span class="active-breadcrum"></span>
     </div>
 
     
     <div class="detail-component">
     <div class="img-container">
-      <img src="img/item-gomitas.jpg" alt="gomitas de colágeno para perros y gatos">
+      <img src="" alt="">
       <p class="product-description">
-        Cuidá la salud de tu perro con nuestras gomitas de colágeno en paquete de 300g. Una opción deliciosa y nutritiva para fortalecer sus articulaciones, piel y pelaje.
-      </p>
+        </p>
     </div>
     <div class="price-container">
-      <h1>Gomitas de colágeno</h1>
-      <h2>$5.000</h2>
+      <h1></h1>
+      <h2></h2>
 
       <div class="box-payment">
         <p>Tenés 5% OFF pagando con transferencia bancaria.</p>
@@ -69,13 +69,9 @@
 
       <label for="quantity" class="quantity-label">Cantidad</label>
       <input id="quantity" class="quantity" type="number" value="1" name="quantity">
-      <a href="cart.html" class="add-to-cart-btn">Añadir al carrito</a>
+      <button class="add-to-cart-btn">Añadir al carrito</button>
 
-      <ul class="details-list">
-        <li>✔ Articulaciones fuertes: Favorecen la movilidad y reducen el desgaste articular.</li>
-        <li>✔ Piel sana y pelaje brillante: Mejoran la hidratación y fortalecen el pelo.</li>
-        <li>✔ Fáciles de digerir: Formuladas para cuidar su sistema digestivo.</li>
-      </ul>
+      <p class="details-list"></p>
     </div>
   </div>
   </main>
@@ -98,6 +94,6 @@
       <a href="#">TikTok</a>
     </div>
 </footer>
-
+<script src="product-detail.js" type="module"></script>
 </body>
 </html>
