--- a/contact.html
+++ b/contact.html
@@ -43,39 +43,40 @@
   </header>
 
   <main class="contact-section">
-        <div class="contact-container">
-            <div class="contact-header">
-                <h1>Contacto</h1>
-                <p>¡Contáctanos para más información!</p>
-            </div>
-            <form action="#" method="POST">
-                <div class="form-row">
-                    <div class="form-group">
-                        <label for="nombre">Nombre <span class="required">*</span></label>
-                        <input type="text" id="nombre" name="nombre" placeholder="Nombre" class="form-input" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="apellido">Apellido</label>
-                        <input type="text" id="apellido" name="apellido" placeholder="Apellido" class="form-input">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email <span class="required">*</span></label>
-                    <input type="email" id="email" name="email" placeholder="tu.mail@gmail.com" class="form-input" required>
-                </div>
-                <div class="form-group">
-                    <label for="telefono">Teléfono</label>
-                    <input type="tel" id="telefono" name="telefono" placeholder="1122334455" class="form-input">
-                </div>
-                <div class="form-group">
-                    <label for="mensaje">Mensaje <span class="required">*</span></label>
-                    <textarea id="mensaje" name="mensaje" rows="5" placeholder="Ingrese su consulta" class="form-input"></textarea>
-                </div>
-                <div class="form-button-container">
-                    <button type="submit" class="submit-button">Enviar</button>
-                </div>
-            </form>
+    <div class="contact-container">
+      <div class="contact-header">
+        <h1>Contacto</h1>
+        <p>¡Contáctanos para más información!</p>
+      </div>
+      <form id="contact-form" action="#" method="POST">
+        <div class="form-row">
+          <div class="form-group">
+            <label for="nombre">Nombre <span class="required">*</span></label>
+            <input type="text" id="nombre" name="nombre" placeholder="Nombre" class="form-input" required>
+          </div>
+          <div class="form-group">
+            <label for="apellido">Apellido</label>
+            <input type="text" id="apellido" name="apellido" placeholder="Apellido" class="form-input">
+          </div>
         </div>
+        <div class="form-group">
+          <label for="email">Email <span class="required">*</span></label>
+          <input type="email" id="email" name="email" placeholder="tu.mail@gmail.com" class="form-input" required>
+        </div>
+        <div class="form-group">
+          <label for="telefono">Teléfono</label>
+          <input type="tel" id="telefono" name="telefono" placeholder="1122334455" class="form-input">
+        </div>
+        <div class="form-group">
+          <label for="mensaje">Mensaje <span class="required">*</span></label>
+          <textarea id="mensaje" name="mensaje" rows="5" placeholder="Ingrese su consulta" class="form-input"></textarea>
+        </div>
+        <div class="form-button-container">
+          <button type="submit" class="submit-button">Enviar</button>
+        </div>
+      </form>
+    </div>
+    <div class="success-message">¡Gracias por contactarnos! En breve responderemos tu consulta.</div>
     </main>
 
    <footer>  
@@ -96,5 +97,6 @@
       <a href="#">TikTok</a>
     </div>
 </footer>
+<script src="contact.js" type="module"></script>
 </body>
 </html>
