feat: implement checkout functionality with cart summary display

--- a/cart-auth.html
+++ b/cart-auth.html
@@ -59,8 +59,6 @@
   <form action="#" method="POST" class="form-wrapper">
 
   <div class="page-grid">
-
-    <!-- 🔹 COLUMNA IZQUIERDA COMPLETA -->
     <div class="left-column">
 
       <section class="contact-column">
@@ -163,5 +161,6 @@
   </form>
 
 </main>
+<script src="checkout.js"></script>
 </body>
 </html>
