feat: add success message for product addition to cart

--- a/cart.html
+++ b/cart.html
@@ -87,7 +87,7 @@
           <button class="checkout-btn">
             <a href="cart-auth.html">Iniciar compra</a>
           </button>
-          
+          <div class="success-message">Producto agregado al carrito</div>
         </div>
     </section>
 
