feat: update login page header and modify login button to link to admin page

--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
   <main class="contact-section">
         <div class="contact-container">
             <div class="contact-header">
-                <h1>Mi cuenta</h1>
+                <h1>Cuenta administración</h1>
                 <p>Inicia sesión</p>
             <form action="#" method="POST">
                 <div class="form-group">
@@ -58,11 +58,14 @@
                     </div>
                 </div>
                 <div class="form-button-container">
-                    <button type="submit" class="submit-button">Iniciar sesión</button>
+                    <!-- <button type="submit" class="submit-button">Iniciar sesión</button> -->
+                    <a href="admin.html" class="submit-button">Iniciar sesión</a>
                 </div>
             </form>
-            <div class="register-link">
+            
+            <!-- <div class="register-link">
                 <p>¿No tienes una cuenta? <a href="register.html">Regístrate aquí</a></p>
+            </div> -->
         </div>
     </main>
 
