feat: enhance success message display for cart actions with improved styling and functionality

--- a/product-details.html
+++ b/product-details.html
@@ -94,5 +94,10 @@
     </div>
 </footer>
 <script src="product-detail.js" type="module"></script>
+
+<div class="success-message" style="display: none;">
+    Producto agregado al carrito con éxito.
+</div>
+
 </body>
 </html>
