--- a/cart-auth.html
+++ b/cart-auth.html
@@ -95,7 +95,7 @@
 
         <div class="form-group">
           <label for="address">Dirección <span class="required">*</span></label>
-          <input type="text" id="address" name="address" class="form-input" required>
+          <input type="text" id="address" name="address" class="form-control" required>
         </div>
 
         <div class="form-row">
