style: refactor navigation structure and improve layout consistency across multiple HTML files

--- a/cart-auth.html
+++ b/cart-auth.html
@@ -14,32 +14,33 @@
 <header class="header" id="the-header">
   <nav class="navbar">
 
-    <input type="checkbox" id="menu-toggle" class="menu-toggle">
-    <label for="menu-toggle" class="menu-btn">
-      <img src="img/list.svg" alt="abrir menú" class="open-menu">
-      <img src="img/x.svg" alt="cerrar menú" class="close-menu">
-    </label>
+      <input type="checkbox" id="menu-toggle" class="menu-toggle">
+       <label for="menu-toggle" class="menu-btn">
+        <img src="img/list.svg" alt="abrir menú" class="open-menu">
+        <img src="img/x.svg" alt="cerrar menú" class="close-menu">
+       </label>
        
-    <a href="index.html" class="logo">
-      <img src="img/logo.png" alt="logo del sitio">
-    </a>
-
-    <div class="right-section">
+      <a href="index.html" class="logo">
+        <img src="img/logo.png" alt="logo del sitio">
+      </a>
+    
+      <div class="right-section">
       <ul class="nav-links">
         <li><a href="products.html">Productos</a></li>
         <li><a href="about-us.html">Nosotros</a></li>
         <li><a href="contact.html">Contacto</a></li>
       </ul>
-    </div>
 
-    <div class="icons">
+      <div class="icons">
       <a href="login.html" class="profile-btn">
         <img src="img/usericon.svg" alt="icono de usuario" class="user-icon">
       </a>
       <a href="cart.html" class="cart-btn">
         <img src="img/cart3.svg" alt="carrito" class="carrito">
       </a>
-    </div>
+      </div>
+      </div>
+    </nav>
 
   </nav>
 </header>
