style: adjust user icon dimensions and hiding info section component

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a href="products.html" class="btn-hero">Ver catálogo</a>
         </div>
       </section>
-
+    <!-- VOY A SACAR ESTA SECCION XQ ME JODE TODO EL RESPONSIVE
     <article class="info-section">
           <div class="first-item">
             <h2>Hecho con amor</h2>
@@ -68,7 +68,7 @@
             <p>Personalizamos según tus necesidades</p>
           </div>
         </div>
-    </article>
+    </article> -->
 
     <section class="products-section">
       <h3>Nuestros productos</h3>
